--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -6,18 +6,17 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainViewController">
    <content>
-      <VBox prefHeight="386.0" prefWidth="599.0">
+      <VBox prefHeight="328.0" prefWidth="478.0">
          <children>
             <MenuBar>
               <menus>
                 <Menu mnemonicParsing="false" text="Cadastro">
                   <items>
-                        <MenuItem mnemonicParsing="false" text="Música" />
-                    <MenuItem mnemonicParsing="false" text="Artista" />
-                        <MenuItem mnemonicParsing="false" text="Álbum" />
+                        <MenuItem fx:id="menuItemMusica" mnemonicParsing="false" onAction="#onMenuItemMusicaAction" text="Música" />
+                    <MenuItem fx:id="menuItemArtista" mnemonicParsing="false" onAction="#onMenuItemArtistaAction" text="Artista" />
+                        <MenuItem fx:id="menuItemAlbum" mnemonicParsing="false" onAction="#onMenuItemAlbumAction" text="Álbum" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
