--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -19,9 +19,9 @@
                         <MenuItem fx:id="menuItemAlbum" mnemonicParsing="false" onAction="#onMenuItemAlbumAction" text="Álbum" />
                   </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Help">
+                <Menu mnemonicParsing="false" text="Sobre">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
+                    <MenuItem fx:id="menuItemSobre" mnemonicParsing="false" onAction="#onMenuItemSobreAction" text="Sobre" />
                   </items>
                 </Menu>
               </menus>
