--- a/src/gui/ListaArtistas.fxml
+++ b/src/gui/ListaArtistas.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="478.0" prefWidth="635.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17">
+<VBox prefHeight="478.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ListaArtistaController">
    <children>
       <Label text="Registros de Artistas">
          <font>
@@ -22,13 +21,13 @@
       </Label>
       <ToolBar prefHeight="40.0" prefWidth="200.0">
         <items>
-          <Button mnemonicParsing="false" text="Novo" />
+          <Button fx:id="btNovo" mnemonicParsing="false" onAction="#onBtNovoAction" text="Novo" />
         </items>
       </ToolBar>
-      <TableView prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="tabelaArtista" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn prefWidth="81.60003507137299" text="Identificador" />
-          <TableColumn prefWidth="366.4000930786133" text="Nome" />
+          <TableColumn fx:id="colunaId" prefWidth="81.60003507137299" text="Código" />
+          <TableColumn fx:id="colunaNome" prefWidth="366.4000930786133" text="Nome" />
         </columns>
       </TableView>
    </children>
